test/sema/typeck/function/return-type-mismatch.dora
fn foo(): Int32 { return 1i32; }
fn f() { let _i: Bool = foo(); }
